Clean up notebook

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -4,16 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To reflect changes made to the source files of your project during the development phase:\n",
-    "- call the [`autoreload` extension](https://ipython.readthedocs.io/en/stable/config/extensions/autoreload.html?highlight=autoreload)\n",
-    "- add your `src` folder to your path \n",
+    "# Example notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the following cell to reflect changes made to the source files of your project during the development phase.\n",
     "\n",
     "**Note:** An object created before the modification of an attribute, a method, etc., in the source files may need to be created again to carry the up-to-date attribute, method, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-19T11:17:11.950718Z",
@@ -28,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-19T11:17:14.132130Z",
@@ -42,41 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-19T11:19:08.873559Z",
      "start_time": "2021-08-19T11:19:08.854920Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "operations.addition(4, 3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "edb87c4790666808c764611b7207da5a74e3c1520d2a7059e158caf0d6a68069"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.5 64-bit ('.venv': poetry)",
    "name": "python3"
   },
   "language_info": {
