notebook: add further explanations to run notebooks

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -11,9 +11,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the following cell to reflect changes made to the source files of your project during the development phase.\n",
+    "## Run the notebook remotely\n",
     "\n",
-    "**Note:** An object created before the modification of an attribute, a method, etc., in the source files may need to be created again to carry the up-to-date attribute, method, etc."
+    "If you're running the notebook remotely, e.g. on Google Colab, your package needs to be installed in order to use it.\n",
+    "\n",
+    "To do this, uncomment and run one of the command below that suits best your needs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your package is on PyPI and you want to use the latest version published there\n",
+    "# !pip install packagename\n",
+    "# You want to use the latest version of the source code available on GitHub\n",
+    "# !pip install git+https://github.com/guilgautier/template-python-project.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the notebook locally\n",
+    "\n",
+    "If you're running the notebook on your local machine, please \n",
+    "\n",
+    "- follow the instructions provided in the [`notebooks/README.md`](https://github.com/guilgautier/template-python-project/blob/main/notebooks/) file, \n",
+    "- or fallback on the instructions given in [Run the notebook remotely](#run-the-notebook-remotely)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're working in development mode run the following cell to reflect changes made to the source files during the development phase.\n",
+    "\n",
+    "**Note:** After running a cell, if you modify an object, method, attribute, function, variable, etc., in the source files, you may need to rerun the cell in order to work with the up-to-date version of the code."
    ]
   },
   {
@@ -24,6 +59,15 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play with the package\n",
+    "\n",
+    "Now that the package is installed, you can import it and use it."
    ]
   },
   {
