notebook: detail usage remotely/locally

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example notebook"
+    "# Example notebook\n",
+    "\n",
+    "- GitHub https://github.com/guilgautier/template-python-project"
    ]
   },
   {
@@ -39,16 +41,25 @@
     "If you're running the notebook on your local machine, please \n",
     "\n",
     "- follow the instructions provided in the [`notebooks/README.md`](https://github.com/guilgautier/template-python-project/blob/main/notebooks/) file, \n",
-    "- or fallback on the instructions given in [Run the notebook remotely](#run-the-notebook-remotely)."
+    "- or fallback on the instructions given in the above section [Run the notebook remotely](#run-the-notebook-remotely)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you're working in development mode run the following cell to reflect changes made to the source files during the development phase.\n",
+    "## Play with the package\n",
     "\n",
-    "**Note:** After running a cell, if you modify an object, method, attribute, function, variable, etc., in the source files, you may need to rerun the cell in order to work with the up-to-date version of the code."
+    "Now that the package is installed, you can import it and use it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "If you're working in development mode run the following cell to reflect changes made to the source files during the development phase."
    ]
   },
   {
@@ -65,9 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Play with the package\n",
-    "\n",
-    "Now that the package is installed, you can import it and use it."
+    "**Note:** After running a cell, if you modify an object, method, attribute, function, variable, etc., in the source files, you may need to rerun the cell in order to work with the up-to-date version of the code."
    ]
   },
   {
